--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <link rel="stylesheet" href="assetts/css/style.css/">
+    <link rel="stylesheet" type="text/css" href="assetts/css/style.css">
     <title>Contact</title>
 
 </head>
@@ -11,22 +11,33 @@
     <!--Ugly background is a class requirement  -->
     <h1>Geordin Soucie</h1>
     <div class="morelinks">
-        <a href=""> About</a>
-        <a href="">portfolio</a>
-        <a href="">Contact</a>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
     </div>
-    <div class="About">
-        <h2> About Me</h2>
-        <!-- <picture src="" alt= "I am not a cat"> </picture> 
-        learn picture tags later-->
-        <img src="" alt="Professional Photo of Me">
-        <!-- reminer to take the photo of me wearing viking tunic and tie, holding a mug near a fridge or something post modern
-        kinda want a ninja mafia feel... do I have a mask? -->
-        <p>
+    <div class="Mainbody">
+        <h2>Contact</h2>
+        <hr>
 
 
 
-        </p>
+<form action="">
+    Name <br>
+    <input type="text" name="name"> <br>
+    Email <br>
+    <input type="text" name="email"> <br>
+    Message <br>
+    <input type="text" name="message"> <br>
+    <button type="submit">Submit</button>
+<!-- useful link    https://www.w3schools.com/html/html_forms.asp -->
+<!-- Need to figure out how to make it actually work -->
+<!-- action attribute ommitted, so should send action to the current page... -->
+<!-- method attribute... get standar, post for sensitive info -->
+
+</form>
+
+
+
     </div>
     <div class="footer">&copy Copyright 2020</div>
 </body>
