--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="Mainbody">
         <h2>About Me</h2>
-        <div class="line"> </div>
+       <hr>
         <img class="side_img" src="assetts/images/Sideways_MountainViking.JPG" alt="Professional Photo" width="266px"
             height="200px" />
         <!-- Note that image is rotated so that Hieght and Width are flipped! -->
@@ -72,9 +72,5 @@
     </div>
     <footer>
 
-        Horrible background is a class requirement
-        <br>
-        &copy;
-        Text Copyright 2020, Geordin Soucie
-    </footer>
+        <div class="footer">&copy Copyright 2020</div>
 </body>
