--- a/portfolio.html
+++ b/portfolio.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
+
 <head>
 
-<link rel="stylesheet" href="assetts/css/style.css/">
-<title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="assetts/css/style.css">
+    <title>Portfolio</title>
 
 </head>
-<body>
-<!--Ugly background is a class requirement  -->
-<h1>Geordin Soucie</h1>
-<div class="morelinks">
-    <a href=""> About</a>
-    <a href="">portfolio</a>
-    <a href="">Contact</a>
-</div>
-<h2>Portfolio</h2>
-<p>I dont think any of these are real yet</p>
-<div class="box"> HangMan?</div> 
-<div class="box"> RGP Game</div> 
-<div class="box"> Trivia Game</div> 
-<div class="box"> Widget?</div> 
-<div class="box"> Rock Paper Scissors</div>
-<div class="box"> Artwork</div> 
-<div class="box"> Stories</div> 
-<div class="box"> placeholderName</div> 
-<div class="box"> placeholderName</div> 
 
-<div class="footer">&copy Copyright 2020</div>
+<body>
+ 
+    <h1>Geordin Soucie</h1>
+    <div class="morelinks">
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    <h2>Portfolio</h2>
+    <hr>
+   
+    
+    <div class="box" id="1"> 
+        <h3>
+        HangMan</h3>
+    </div>
+    <div class="box" id="2"> RGP Game
+
+    </div>
+    <div class="box" id="3"> Trivia Game
+
+    </div>
+    <div class="box" id="4"> Widget
+
+    </div>
+    <div class="box" id="5"> Rock Paper Scissors
+
+    </div>
+    <div class="box" id="6"> Artwork
+
+    </div>
+    <div class="box" id="7"> Stories
+
+    </div>
+    <div class="box" id="8"> Blender
+
+    </div>
+    <div class="box" id="9"> TheseButtons<br>DontRun...yet
+    </div>
+<!-- background should be footer... -->
+    <div class="footer">&copy Copyright 2020</div>
 </body>
