added cyan color and hr

--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body>
 
     <h1>Geordin Soucie</h1>
-    <div class="morelinks">
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-    </div>
 
-    <div class="Mainbody">
+    <div class="morelinks">
+        <a href="index.html" target="_blank">About</a>
+        <a href="portfolio.html" target="_blank">Portfolio</a>
+        <a href="contact.html" target="_blank">Contact</a>
+    </div>
+    <hr>
+    <div class="mainbody">
         <h2>About Me</h2>
-       <hr>
+        <hr>
         <img class="side_img" src="assetts/images/Sideways_MountainViking.JPG" alt="Professional Photo" width="266px"
             height="200px" />
         <!-- Note that image is rotated so that Hieght and Width are flipped! -->
@@ -62,11 +63,11 @@
             Or you can try smoke signals.
 
         </p>
-        <h3> <em>May your stories entertain, your journeys be joyful, and your mead warm.
+        <h4> <em>May your stories entertain, your journeys be joyful, and your mead warm.
                 <br>
                 GormTheWyrm
             </em>
-        </h3>
+        </h4>
 
 
     </div>
