--- a/portfolio.html
+++ b/portfolio.html
@@ -8,44 +8,49 @@
 </head>
 
 <body>
- 
+
     <h1>Geordin Soucie</h1>
+
     <div class="morelinks">
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html" target="_blank">About</a>
+        <a href="portfolio.html" target="_blank">Portfolio</a>
+        <a href="contact.html" target="_blank">Contact</a>
     </div>
+    <hr>
+
+
     <h2>Portfolio</h2>
     <hr>
-   
-    
-    <div class="box" id="1"> 
-        <h3>
-        HangMan</h3>
-    </div>
-    <div class="box" id="2"> RGP Game
+    <div class="mainbody">
 
-    </div>
-    <div class="box" id="3"> Trivia Game
+        <div class="box" id="1">
+            <h3>
+                HangMan</h3>
+        </div>
+        <div class="box" id="2"> RGP Game
 
-    </div>
-    <div class="box" id="4"> Widget
+        </div>
+        <div class="box" id="3"> Trivia Game
 
-    </div>
-    <div class="box" id="5"> Rock Paper Scissors
+        </div>
+        <div class="box" id="4"> Widget
 
-    </div>
-    <div class="box" id="6"> Artwork
+        </div>
+        <div class="box" id="5"> Rock Paper Scissors
 
-    </div>
-    <div class="box" id="7"> Stories
+        </div>
+        <div class="box" id="6"> Artwork
 
-    </div>
-    <div class="box" id="8"> Blender
+        </div>
+        <div class="box" id="7"> Stories
 
+        </div>
+        <div class="box" id="8"> Blender
+
+        </div>
+        <div class="box" id="9"> TheseButtons<br>DontRun...yet
+        </div>
     </div>
-    <div class="box" id="9"> TheseButtons<br>DontRun...yet
-    </div>
-<!-- background should be footer... -->
+    <!-- background should be footer... -->
     <div class="footer">&copy Copyright 2020</div>
 </body>
