--- a/contact.html
+++ b/contact.html
@@ -10,31 +10,33 @@
 <body>
     <!--Ugly background is a class requirement  -->
     <h1>Geordin Soucie</h1>
+
     <div class="morelinks">
-        <a href="index.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html" target="_blank">About</a>
+        <a href="portfolio.html" target="_blank">Portfolio</a>
+        <a href="contact.html" target="_blank">Contact</a>
     </div>
-    <div class="Mainbody">
+    <hr>
+    <div class="mainbody">
         <h2>Contact</h2>
         <hr>
 
 
 
-<form action="">
-    Name <br>
-    <input type="text" name="name"> <br>
-    Email <br>
-    <input type="text" name="email"> <br>
-    Message <br>
-    <input type="text" name="message"> <br>
-    <button type="submit">Submit</button>
-<!-- useful link    https://www.w3schools.com/html/html_forms.asp -->
-<!-- Need to figure out how to make it actually work -->
-<!-- action attribute ommitted, so should send action to the current page... -->
-<!-- method attribute... get standar, post for sensitive info -->
+        <form action="">
+            Name <br>
+            <input type="text" name="name"> <br>
+            Email <br>
+            <input type="text" name="email"> <br>
+            Message <br>
+            <input type="text" name="message"> <br>
+            <button type="submit">Submit</button>
+            <!-- useful link    https://www.w3schools.com/html/html_forms.asp -->
+            <!-- Need to figure out how to make it actually work -->
+            <!-- action attribute ommitted, so should send action to the current page... -->
+            <!-- method attribute... get standar, post for sensitive info -->
 
-</form>
+        </form>
 
 
 
