--- a/portfolio.html
+++ b/portfolio.html
@@ -27,28 +27,36 @@
             <h3>
                 HangMan</h3>
         </div>
-        <div class="box" id="2"> RGP Game
+        <div class="box" id="2"> 
+          <h3> RGP Game</h3>
 
         </div>
-        <div class="box" id="3"> Trivia Game
+        <div class="box" id="3"> 
+            <h3> Trivia Game</h3>
 
         </div>
-        <div class="box" id="4"> Widget
+        <div class="box" id="4">
+            <h3> Widget</h3>
 
         </div>
-        <div class="box" id="5"> Rock Paper Scissors
+        <div class="box" id="5">
+            <h3> Rock Paper Scissors</h3>
 
         </div>
-        <div class="box" id="6"> Artwork
+        <div class="box" id="6">
+            <h3> Artwork</h3>
 
         </div>
-        <div class="box" id="7"> Stories
+        <div class="box" id="7">
+            <h3> Stories</h3>
 
         </div>
-        <div class="box" id="8"> Blender
+        <div class="box" id="8">
+            <h3> Blender</h3>
 
         </div>
-        <div class="box" id="9"> TheseButtons<br>DontRun...yet
+        <div class="box" id="9">
+            <h3> TheseButtons<br>DontRun...yet</h3>
         </div>
     </div>
     <!-- background should be footer... -->
