--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" type="text/css" href="assetts/css/style.css" />
-    <title>Bio</title>
+    <title>About Me</title>
 
 </head>
 
