--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,9 @@
             Email <br>
             <input type="text" name="email"> <br>
             Message <br>
-            <input type="text" name="message"> <br>
+            <!-- <input type="text" size="75" name="message">  -->
+            <textarea cols="60" rows="6"></textarea>
+            <br><br>
             <button type="submit">Submit</button>
             <!-- useful link    https://www.w3schools.com/html/html_forms.asp -->
             <!-- Need to figure out how to make it actually work -->
@@ -37,8 +39,8 @@
             <!-- method attribute... get standar, post for sensitive info -->
 
         </form>
-
-
+        <div class="push" ></div>
+        
 
     </div>
     <div class="footer">&copy Copyright 2020</div>
