--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
     <div class="mainbody">
         <h2>About Me</h2>
         <hr>
-        <img class="side_img" src="assetts/images/Sideways_MountainViking.JPG" alt="Professional Photo" width="266px"
+
+        <p>
+            <img class="side_img" src="assetts/images/Sideways_MountainViking.JPG" alt="Professional Photo" width="266px"
             height="200px" />
         <!-- Note that image is rotated so that Hieght and Width are flipped! -->
-        <p>
 
             As you can probably tell, I am a medieval enthusiast who likes to participate in various medieval activities
-            such as the events run by the <a href="www.sca.org" target="_blank">Society of Creation Anachronism.</a>
+            such as the events run by the <a href="https://www.sca.org/" target="_blank">Society of Creation Anachronism.</a>
             Unsurprisingly, I am also a huge fan of medieval fantasy and similarly themed filk and folk music.
             My other hobbies include sailing, rowing, hiking, swordplay, bonfires and carrying loot on long beachside
             journeys.
@@ -68,6 +69,7 @@
                 GormTheWyrm
             </em>
         </h4>
+        <!-- not reading this h5 as space on the page... -->
 
 
     </div>
