--- a/portfolio.html
+++ b/portfolio.html
@@ -22,43 +22,45 @@
     <h2>Portfolio</h2>
     <hr>
     <div class="mainbody">
+        
 
-        <div class="box" id="1">
-            <h3>
-                HangMan</h3>
+        <div class="box" id="box1">
+            <h3> HangMan</h3>
         </div>
-        <div class="box" id="2"> 
-          <h3> RGP Game</h3>
+        <div class="box" id="box2"> 
+            <h3> RGP Game</h3>
 
         </div>
-        <div class="box" id="3"> 
+        <div class="box" id="box3"> 
             <h3> Trivia Game</h3>
 
         </div>
-        <div class="box" id="4">
+        <div class="box" id="box4">
             <h3> Widget</h3>
 
         </div>
-        <div class="box" id="5">
+        <div class="box" id="box5">
             <h3> Rock Paper Scissors</h3>
 
         </div>
-        <div class="box" id="6">
+        <div class="box" id="box6">
             <h3> Artwork</h3>
 
         </div>
-        <div class="box" id="7">
+        <div class="box" id="box7">
             <h3> Stories</h3>
 
         </div>
-        <div class="box" id="8">
+        <div class="box" id="box8">
             <h3> Blender</h3>
 
         </div>
-        <div class="box" id="9">
+        <div class="box" id="box9">
             <h3> TheseButtons<br>DontRun...yet</h3>
         </div>
     </div>
     <!-- background should be footer... -->
+    <div class="push" ></div>
     <div class="footer">&copy Copyright 2020</div>
+
 </body>
