background now exists

--- a/contact.html
+++ b/contact.html
@@ -4,19 +4,21 @@
 
     <link rel="stylesheet" type="text/css" href="assetts/css/style.css">
     <title>Contact</title>
-
+    
 </head>
 
 <body>
-
-    <h1>Geordin Soucie</h1>
-
-    <div class="morelinks">
-        <a href="index.html" target="_blank">About</a>
-        <a href="portfolio.html" target="_blank">Portfolio</a>
-        <a href="contact.html" target="_blank">Contact</a>
+    <div class="header1">
+        <h1>Geordin Soucie</h1>
+        <div class="morelinks">
+            <a href="index.html" target="_blank">About</a>
+            <a href="portfolio.html" target="_blank">Portfolio</a>
+            <a href="contact.html" target="_blank">Contact</a>
+        </div>
     </div>
     <hr>
+    <!-- background should kick into effect after this -->
+    <div class="bg-spot">
     <div class="mainbody">
         <h2>Contact</h2>
         <hr>
@@ -44,4 +46,6 @@
 
     </div>
     <div class="footer">&copy Copyright 2020</div>
+</div>
+
 </body>
