--- a/index.html
+++ b/index.html
@@ -6,74 +6,86 @@
     <title>About Me</title>
 
 </head>
+<!-- **************************** -->
 
 <body>
-
-    <h1>Geordin Soucie</h1>
-
-    <div class="morelinks">
-        <a href="index.html" target="_blank">About</a>
-        <a href="portfolio.html" target="_blank">Portfolio</a>
-        <a href="contact.html" target="_blank">Contact</a>
+    <div class="header1">
+        <h1>Geordin Soucie</h1>
+        <div class="morelinks">
+            <a href="index.html" target="_blank">About</a>
+            <a href="portfolio.html" target="_blank">Portfolio</a>
+            <a href="contact.html" target="_blank">Contact</a>
+        </div>
     </div>
     <hr>
-    <div class="mainbody">
-        <h2>About Me</h2>
-        <hr>
-
-        <p>
-            <img class="side_img" src="assetts/images/Sideways_MountainViking.JPG" alt="Professional Photo" width="266px"
-            height="200px" />
-        <!-- Note that image is rotated so that Hieght and Width are flipped! -->
-
-            As you can probably tell, I am a medieval enthusiast who likes to participate in various medieval activities
-            such as the events run by the <a href="https://www.sca.org/" target="_blank">Society of Creation Anachronism.</a>
-            Unsurprisingly, I am also a huge fan of medieval fantasy and similarly themed filk and folk music.
-            My other hobbies include sailing, rowing, hiking, swordplay, bonfires and carrying loot on long beachside
-            journeys.
-        </p>
-
-        <h5><em>At the time of this writing the SCA website is down, but eventually you should be able to see local
-                events
-                at <a href="http://atlantia.sca.org/calendar.php" target="_blank">the Atlantian Calandar of
-                    Events.</em></a>
-        </h5>
-
-        <p>
-            Recently I enrolled at the University of Richmond for a Web Development Bootcamp.
-            As an aspiring digital creator I spend a lot of my free time learning about Game Design,
-            Story Structure, and Medieval Societies.
-            I am also working on an elaborate fantasy setting for a piece of creative fiction.
-            Hopefully that will be established as the setting for a series of games or novels sometime in the future.
-            <br> <br>
-            To the horror of all, I have also begun to poke around the idea of using blender for 3D modeling.
-            I am nearly skilled enough to create an egg.
+    <!-- background should kick into effect after this -->
 
 
-        </p>
+    <div class="bg-spot">
+        
+        <div class="mainbody">
+            <h2>About Me</h2>
+            <hr>
+
+            <p>
+                <img class="side_img" src="assetts/images/Sideways_MountainViking.JPG" alt="Professional Photo"
+                    width="266px" height="200px" />
+                <!-- Note that image is rotated so that Hieght and Width are flipped! -->
+
+                As you can probably tell, I am a medieval enthusiast who likes to participate in various medieval
+                activities
+                such as the events run by the <a href="https://www.sca.org/" target="_blank">Society of Creation
+                    Anachronism.</a>
+                Unsurprisingly, I am also a huge fan of medieval fantasy and similarly themed filk and folk music.
+                My other hobbies include sailing, rowing, hiking, swordplay, bonfires and carrying loot on long
+                beachside
+                journeys.
+            </p>
+
+            <h5><em>At the time of this writing the SCA website is down, but eventually you should be able to see local
+                    events
+                    at <a href="http://atlantia.sca.org/calendar.php" target="_blank">the Atlantian Calandar of
+                        Events.</em></a>
+            </h5>
+
+            <p>
+                Recently I enrolled at the University of Richmond for a Web Development Bootcamp.
+                As an aspiring digital creator I spend a lot of my free time learning about Game Design,
+                Story Structure, and Medieval Societies.
+                I am also working on an elaborate fantasy setting for a piece of creative fiction.
+                Hopefully that will be established as the setting for a series of games or novels sometime in the
+                future.
+                <br> <br>
+                To the horror of all, I have also begun to poke around the idea of using blender for 3D modeling.
+                I am nearly skilled enough to create an egg.
 
 
-        <p>
-            If you are reading this because you are looking to hire me,
-            feel free to believe that I merely forgot to change this after posting it for a school assignment.
-            It could be true.
+            </p>
 
-            When I am not raiding I can be found by hitting the <a href="contact.html" target="_blank"> Contact </a>
-            button.
-            <br>
-            Or you can try smoke signals.
 
-        </p>
-        <h4> <em>May your stories entertain, your journeys be joyful, and your mead warm.
+            <p>
+                If you are reading this because you are looking to hire me,
+                feel free to believe that I merely forgot to change this after posting it for a school assignment.
+                It could be true.
+
+                When I am not raiding I can be found by hitting the <a href="contact.html" target="_blank"> Contact </a>
+                button.
                 <br>
-                GormTheWyrm
-            </em>
-        </h4>
-        <!-- not reading this h5 as space on the page... -->
+                Or you can try smoke signals.
+
+            </p>
+            <h4> <em>May your stories entertain, your journeys be joyful, and your mead warm.
+                    <br>
+                    GormTheWyrm
+                </em>
+            </h4>
+            <!-- not reading this h5 as space on the page... -->
 
 
-    </div>
-    <footer>
+        </div>
+    
+    <div class="footer">
 
         <div class="footer">&copy Copyright 2020</div>
+    </div>
 </body>
