--- a/portfolio.html
+++ b/portfolio.html
@@ -9,58 +9,60 @@
 
 <body>
 
-    <h1>Geordin Soucie</h1>
-
-    <div class="morelinks">
-        <a href="index.html" target="_blank">About</a>
-        <a href="portfolio.html" target="_blank">Portfolio</a>
-        <a href="contact.html" target="_blank">Contact</a>
-    </div>
-    <hr>
-
-
-    <h2>Portfolio</h2>
-    <hr>
-    <div class="mainbody">
-        
-
-        <div class="box" id="box1">
-            <h3> HangMan</h3>
-        </div>
-        <div class="box" id="box2"> 
-            <h3> RGP Game</h3>
-
-        </div>
-        <div class="box" id="box3"> 
-            <h3> Trivia Game</h3>
-
-        </div>
-        <div class="box" id="box4">
-            <h3> Widget</h3>
-
-        </div>
-        <div class="box" id="box5">
-            <h3> Rock Paper Scissors</h3>
-
-        </div>
-        <div class="box" id="box6">
-            <h3> Artwork</h3>
-
-        </div>
-        <div class="box" id="box7">
-            <h3> Stories</h3>
-
-        </div>
-        <div class="box" id="box8">
-            <h3> Blender</h3>
-
-        </div>
-        <div class="box" id="box9">
-            <h3> TheseButtons<br>DontRun...yet</h3>
+    <div class="header1">
+        <h1>Geordin Soucie</h1>
+        <div class="morelinks">
+            <a href="index.html" target="_blank">About</a>
+            <a href="portfolio.html" target="_blank">Portfolio</a>
+            <a href="contact.html" target="_blank">Contact</a>
         </div>
     </div>
-    <!-- background should be footer... -->
-    <div class="push" ></div>
-    <div class="footer">&copy Copyright 2020</div>
+    <hr>
+    <!-- background should kick into effect after this -->
 
+
+    <div class="bg-spot">
+        <div class="mainbody">
+            <h2>Portfolio</h2>
+            <hr>
+
+            <div class="box" id="box1">
+                <h3> HangMan</h3>
+            </div>
+            <div class="box" id="box2">
+                <h3> RGP Game</h3>
+
+            </div>
+            <div class="box" id="box3">
+                <h3> Trivia Game</h3>
+
+            </div>
+            <div class="box" id="box4">
+                <h3> Widget</h3>
+
+            </div>
+            <div class="box" id="box5">
+                <h3> Rock Paper Scissors</h3>
+
+            </div>
+            <div class="box" id="box6">
+                <h3> Artwork</h3>
+
+            </div>
+            <div class="box" id="box7">
+                <h3> Stories</h3>
+
+            </div>
+            <div class="box" id="box8">
+                <h3> Blender</h3>
+
+            </div>
+            <div class="box" id="box9">
+                <h3> TheseButtons<br>DontRun...yet</h3>
+            </div>
+        </div>
+        <!-- background should be footer... -->
+        <div class="push"></div>
+        <div class="footer">&copy Copyright 2020</div>
+    </div>
 </body>
