--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1>Geordin Soucie</h1>
         <div class="morelinks">
             <a href="index.html" target="_blank">About</a>
+            |
             <a href="portfolio.html" target="_blank">Portfolio</a>
+            |
             <a href="contact.html" target="_blank">Contact</a>
         </div>
     </div>
@@ -34,12 +36,11 @@
 
                 As you can probably tell, I am a medieval enthusiast who likes to participate in various medieval
                 activities
-                such as the events run by the <a href="https://www.sca.org/" target="_blank">Society of Creation
+                such as the events run by the <a href="https://www.sca.org/" target="_blank">Society of Creative
                     Anachronism.</a>
-                Unsurprisingly, I am also a huge fan of medieval fantasy and similarly themed filk and folk music.
+                Unsurprisingly, I am also a huge fan of medieval fantasy and similarly themed filk, bardic and folk music.
                 My other hobbies include sailing, rowing, hiking, swordplay, bonfires and carrying loot on long
-                beachside
-                journeys.
+                beachside journeys.
             </p>
 
             <h5><em>At the time of this writing the SCA website is down, but eventually you should be able to see local
