--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <div class="bg-spot">
-        
+
         <div class="mainbody">
             <h2>About Me</h2>
             <hr>
@@ -38,7 +38,8 @@
                 activities
                 such as the events run by the <a href="https://www.sca.org/" target="_blank">Society of Creative
                     Anachronism.</a>
-                Unsurprisingly, I am also a huge fan of medieval fantasy and similarly themed filk, bardic and folk music.
+                Unsurprisingly, I am also a huge fan of medieval fantasy and similarly themed filk, bardic and folk
+                music.
                 My other hobbies include sailing, rowing, hiking, swordplay, bonfires and carrying loot on long
                 beachside journeys.
             </p>
@@ -84,9 +85,8 @@
 
 
         </div>
-    
-    <div class="footer">
 
         <div class="footer">&copy Copyright 2020</div>
     </div>
+
 </body>
