validated and removed errors

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assetts/css/style.css">
     <title>Contact</title>
 
@@ -27,7 +29,8 @@
 
 
 
-            <form action="" class="testform">
+            <!-- <form action="" class="testform"> -->
+            <form action="/action_page.php" method="get">
                 Name <br>
                 <!-- <input type="text" name="name"> <br> -->
                 <textarea cols="125" rows="1">John Smith</textarea>
@@ -40,7 +43,7 @@
                 <!-- <input type="text" size="75" name="message">  -->
                 <textarea cols="125" rows="12"> Help, I'm a bug!</textarea>
                 <br><br>
-                <button type="submit" button class="testbutton">Submit</button>
+                <button type="submit" class="testbutton">Submit</button>
 
                 <!-- useful link    https://www.w3schools.com/html/html_forms.asp -->
                 <!-- Need to figure out how to make it actually work -->
@@ -52,7 +55,7 @@
 
 
         </div>
-        <div class="footer">&copy Copyright 2020</div>
+        <div class="footer">&copy; Copyright 2020</div>
     </div>
 
 </body>
