--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
+
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="assetts/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="assetts/css/style.css">
     <title>About Me</title>
 
 </head>
@@ -31,8 +35,9 @@
 
             <p>
                 <img class="side_img" src="assetts/images/Sideways_MountainViking.JPG" alt="Professional Photo"
-                    width="266px" height="200px" />
+                    width="266" height="200" />
                 <!-- Note that image is rotated so that Hieght and Width are flipped! -->
+                <!-- validation told me to remove "px" from these values... hope they are right -->
 
                 As you can probably tell, I am a medieval enthusiast who likes to participate in various medieval
                 activities
@@ -44,10 +49,13 @@
                 beachside journeys.
             </p>
 
-            <h5><em>At the time of this writing the SCA website is down, but eventually you should be able to see local
+            <h5>
+                <em>
+                    At the time of this writing the SCA website is down, but eventually you should be able to see local
                     events
                     at <a href="http://atlantia.sca.org/calendar.php" target="_blank">the Atlantian Calandar of
-                        Events.</em></a>
+                        Events.</a>
+                </em>
             </h5>
 
             <p>
@@ -86,7 +94,7 @@
 
         </div>
 
-        <div class="footer">&copy Copyright 2020</div>
+        <div class="footer">&copy; Copyright 2020</div>
     </div>
 
 </body>
