--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,10 @@
+
+
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="assetts/css/style.css">
     <title>Portfolio</title>
 
@@ -65,6 +68,6 @@
         </div>
 
 
-        <div class="footer">&copy Copyright 2020</div>
+        <div class="footer">&copy; Copyright 2020</div>
     </div>
 </body>
